--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                  <svg class="icon facebook">
                     <g width="32" height="31" class="iconic-md iconic-container" display="none">
                         <g class="iconic-social-facebook" display="inline">
-                            <path d="M30.234 0h-28.468c-.976 0-1.766.791-1.766 1.766v28.468c0 .975.79 1.766 1.766 1.766h15.326v-12.392h-4.17v-4.829h4.17v-3.562c0-4.133 2.524-6.384 6.212-6.384 1.766 0 3.284.132 3.727.19v4.319l-2.557.001c-2.005 0-2.393.953-2.393 2.351v3.083h4.782l-.623 4.829h-4.16v12.392h8.155c.975 0 1.766-.791 1.766-1.766v-28.468c0-.976-.791-1.766-1.766-1.766z"
+                            <path fill="white" d="M30.234 0h-28.468c-.976 0-1.766.791-1.766 1.766v28.468c0 .975.79 1.766 1.766 1.766h15.326v-12.392h-4.17v-4.829h4.17v-3.562c0-4.133 2.524-6.384 6.212-6.384 1.766 0 3.284.132 3.727.19v4.319l-2.557.001c-2.005 0-2.393.953-2.393 2.351v3.083h4.782l-.623 4.829h-4.16v12.392h8.155c.975 0 1.766-.791 1.766-1.766v-28.468c0-.976-.791-1.766-1.766-1.766z"
                                   class="iconic-property-fill"></path>
                         </g>
                     </g>
