--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Proyecto Unidad 2</title>
-    <script src="//d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link  rel="stylesheet"  href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
@@ -39,7 +40,23 @@
     </section>
     <section id="footer" class="row">
         <section id="footer-info" class="col-sm">Dirección</section>
-        <section id="footer-social" class="col-sm">Redes Sociales</section>
+        <section id="footer-social" class="col-sm">Redes Sociales
+                      <div class="mb-2 mt-2 ">
+                        <a class="sm-icon" href="https://www.facebook.com/UNIVERSIDADCUAUHTEMOCAGS/" target="_blank">
+                          <i class="fab fa-facebook-square mr-md-5 mr-3 fa-2x"> </i>
+                        </a>
+                        <a class="sm-icon" href="https://twitter.com/ucuauhtemocags" target="_blank">
+                          <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                        </a>
+                        <a class="sm-icon" href="https://www.youtube.com/user/redcuauhtemoc" target="_blank">
+                          <i class="fab fa-youtube fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                        </a>
+                        <a class="sm-icon" href="https://linkedin.com/ucuauhtemocags" target="_blank"></a>
+                          <i class="fab fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                        </a>
+                      </div>
+            
+        </section>
     </section>
 </section>
 
