--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
 <section class="container-fluid" id="app">
     <section id="header" class="row">
-        <section id="header-logo" class="col-1">
+        <section id="header-logo" class="col-2">
             <img src="assets/logo.png">
         </section>
-        <section id="header-details" class="col-11">
+        <section id="header-details" class="col-10">
             <section id="header-title">
                 Soluciones especializadas en Big Data
             </section>
@@ -33,9 +33,13 @@
         </section>
     </section>
     <section id="body" class="row">
-        <section id="body-video" class="col-sm">video</section>
-        <section id="body-svg" class="col-sm">svg</section>
-        <section id="body-d3" class="col-sm">d3</section>
+        <section id="body-video" class="col-4">
+            <p>En el siguiente video explicamos la funcionalidad de nuestros servicios y el por que nosotros somos su mejor opción.</p>
+            <iframe src="https://www.youtube.com/embed/CcDCqW88uNY">
+            </iframe>
+        </section>
+        <section id="body-svg" class="col-4">svg</section>
+        <section id="body-d3" class="col-4">d3</section>
     </section>
     <section id="footer" class="row">
         <section id="footer-info" class="col-sm">
@@ -46,18 +50,19 @@
                 <br>
                 C.P. 20276 Tels. (312) 123.45.67
                 <br>
-                Aguascalientes, Ags., Mexico
+                Aguascalientes, Ags., México
             </div>
         </section>
         <section id="footer-social" class="col-sm">
-                 <svg class="icon facebook">
-                    <g width="32" height="31" class="iconic-md iconic-container" display="none">
-                        <g class="iconic-social-facebook" display="inline">
-                            <path fill="white" d="M30.234 0h-28.468c-.976 0-1.766.791-1.766 1.766v28.468c0 .975.79 1.766 1.766 1.766h15.326v-12.392h-4.17v-4.829h4.17v-3.562c0-4.133 2.524-6.384 6.212-6.384 1.766 0 3.284.132 3.727.19v4.319l-2.557.001c-2.005 0-2.393.953-2.393 2.351v3.083h4.782l-.623 4.829h-4.16v12.392h8.155c.975 0 1.766-.791 1.766-1.766v-28.468c0-.976-.791-1.766-1.766-1.766z"
-                                  class="iconic-property-fill"></path>
-                        </g>
+            <svg class="icon facebook">
+                <g width="32" height="31" class="iconic-md iconic-container" display="none">
+                    <g class="iconic-social-facebook" display="inline">
+                        <path fill="white"
+                              d="M30.234 0h-28.468c-.976 0-1.766.791-1.766 1.766v28.468c0 .975.79 1.766 1.766 1.766h15.326v-12.392h-4.17v-4.829h4.17v-3.562c0-4.133 2.524-6.384 6.212-6.384 1.766 0 3.284.132 3.727.19v4.319l-2.557.001c-2.005 0-2.393.953-2.393 2.351v3.083h4.782l-.623 4.829h-4.16v12.392h8.155c.975 0 1.766-.791 1.766-1.766v-28.468c0-.976-.791-1.766-1.766-1.766z"
+                              class="iconic-property-fill"></path>
                     </g>
-                </svg>
+                </g>
+            </svg>
             Redes Sociales
         </section>
     </section>
