--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<<<<<<< HEAD
-    <link  rel="stylesheet"  href="styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-=======
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
->>>>>>> 3135350ac3d2052fcf70f4ddb38895bea20a19ac
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
@@ -39,7 +36,8 @@
     </section>
     <section id="body" class="row">
         <section id="body-video" class="col-4">
-            <p>En el siguiente video explicamos la funcionalidad de nuestros servicios y el por que nosotros somos su mejor opción.</p>
+            <p>En el siguiente video explicamos la funcionalidad de nuestros servicios y el por que nosotros somos su
+                mejor opción.</p>
             <iframe src="https://www.youtube.com/embed/CcDCqW88uNY">
             </iframe>
         </section>
@@ -47,25 +45,6 @@
         <section id="body-d3" class="col-4">d3</section>
     </section>
     <section id="footer" class="row">
-<<<<<<< HEAD
-        <section id="footer-info" class="col-sm">Dirección</section>
-        <section id="footer-social" class="col-sm">Redes Sociales
-                      <div class="mb-2 mt-2 ">
-                        <a class="sm-icon" href="https://www.facebook.com/UNIVERSIDADCUAUHTEMOCAGS/" target="_blank">
-                          <i class="fab fa-facebook-square mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <a class="sm-icon" href="https://twitter.com/ucuauhtemocags" target="_blank">
-                          <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <a class="sm-icon" href="https://www.youtube.com/user/redcuauhtemoc" target="_blank">
-                          <i class="fab fa-youtube fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <a class="sm-icon" href="https://linkedin.com/ucuauhtemocags" target="_blank"></a>
-                          <i class="fab fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                      </div>
-            
-=======
         <section id="footer-info" class="col-sm">
             <div id="footer-info-address">
                 Av. Héroe De Nacozari Sur #2301
@@ -77,18 +56,21 @@
                 Aguascalientes, Ags., México
             </div>
         </section>
-        <section id="footer-social" class="col-sm">
-            <svg class="icon facebook">
-                <g width="32" height="31" class="iconic-md iconic-container" display="none">
-                    <g class="iconic-social-facebook" display="inline">
-                        <path fill="white"
-                              d="M30.234 0h-28.468c-.976 0-1.766.791-1.766 1.766v28.468c0 .975.79 1.766 1.766 1.766h15.326v-12.392h-4.17v-4.829h4.17v-3.562c0-4.133 2.524-6.384 6.212-6.384 1.766 0 3.284.132 3.727.19v4.319l-2.557.001c-2.005 0-2.393.953-2.393 2.351v3.083h4.782l-.623 4.829h-4.16v12.392h8.155c.975 0 1.766-.791 1.766-1.766v-28.468c0-.976-.791-1.766-1.766-1.766z"
-                              class="iconic-property-fill"></path>
-                    </g>
-                </g>
-            </svg>
-            Redes Sociales
->>>>>>> 3135350ac3d2052fcf70f4ddb38895bea20a19ac
+        <section id="footer-social" class="col-sm">Redes Sociales
+            <div class="mb-2 mt-2 ">
+                <a class="sm-icon" href="https://www.facebook.com/UNIVERSIDADCUAUHTEMOCAGS/" target="_blank">
+                    <i class="fab fa-facebook-square mr-md-5 mr-3 fa-2x"> </i>
+                </a>
+                <a class="sm-icon" href="https://twitter.com/ucuauhtemocags" target="_blank">
+                    <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                </a>
+                <a class="sm-icon" href="https://www.youtube.com/user/redcuauhtemoc" target="_blank">
+                    <i class="fab fa-youtube fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                </a>
+                <a class="sm-icon" href="https://linkedin.com/ucuauhtemocags" target="_blank"></a>
+                <i class="fab fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                </a>
+            </div>
         </section>
     </section>
 </section>
