mensaje de guardado

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                 </section>
             </form>
         </section>
+        <section id="form-sent" class="col-12 hi">
+            <div class="alert alert-success col-8" role="alert">
+                <h4 class="alert-heading">¡Sus datos han sido enviados!</h4>
+                <p>Muchas gracias por escribirnos, le responderemos lo más pronto posible, su negocio es muy importante para nosotros! </p>
+            </div>
+        </section>
     </section>
     <section id="body" class="row">
         <section id="body-video" class="col-4">
