--- a/index.html
+++ b/index.html
@@ -27,10 +27,40 @@
                 Soluciones especializadas en Big Data
             </section>
             <section id="header-bookmark" class="row">
-                <section id="header-bookmark-menu" class="col-sm">
-                    Menu
+                <section id="header-bookmark-menu" class="col-8">
+                    <nav class="navbar navbar-expand-sm navbar-dark ">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="javascript:">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="javascript:">Clientes</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="javascript:">Contratar</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                       role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Más info
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="javascript:">Big action</a>
+                                        <a class="dropdown-item" href="javascript:">D3 token</a>
+                                        <a class="dropdown-item" href="javascript:">Machine Learning</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
                 </section>
-                <section id="header-bookmark-form" class="col-sm">
+                <section id="header-bookmark-form" class="col-4">
                     <a href="javascript:" id="header-bookmark-form-link" onclick="showForm()">Informes</a>
                 </section>
             </section>
