--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </section>
             </form>
         </section>
-        <section id="form-sent" class="col-12 hi">
+        <section id="form-sent" class="col-12 hidden">
             <div class="alert alert-success col-8" role="alert">
                 <h4 class="alert-heading">¡Sus datos han sido enviados!</h4>
                 <p>Muchas gracias por escribirnos, le responderemos lo más pronto posible, su negocio es muy importante
