--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="javascript:">Inicio</a>
+                                    <a class="nav-link active" href="javascript:goHome()">Inicio</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="javascript:">Clientes</a>
