--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Pragma" content="no-cache">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,  user-scalable=no">
 
     <title>Proyecto Unidad 2</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -39,20 +39,20 @@
                                     <a class="nav-link active" href="javascript:goHome()">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="javascript:">Clientes</a>
+                                    <a class="nav-link" href="http://hotmail.com" target="_blank">Clientes</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="javascript:">Contratar</a>
+                                    <a class="nav-link" href="http://gmail.com" target="_blank">Contratar</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                    <a class="nav-link dropdown-toggle" href="javascript:" id="navbarDropdownMenuLink"
                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Más info
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="javascript:">Big action</a>
-                                        <a class="dropdown-item" href="javascript:">D3 token</a>
-                                        <a class="dropdown-item" href="javascript:">Machine Learning</a>
+                                        <a class="dropdown-item" href="http://google.com" target="_blank">Big data action</a>
+                                        <a class="dropdown-item" href="http://yahoo.com" target="_blank">D3 token</a>
+                                        <a class="dropdown-item" href="http://nasa.gov" target="_blank">Machine Learning</a>
                                     </div>
                                 </li>
                             </ul>
@@ -77,7 +77,7 @@
                 <div class="form-group">
                     <label for="FControlInput2">Dirección de correo electrónico</label>
                     <input type="email" class="form-control" id="FControlInput2"
-                           placeholder="nombre@correo.com" required>
+                           placeholder="nombre@mail.com" required>
                 </div>
                 <div class="form-group">
                     <label for="FControlSelect1">¿Cómo se enteró de nuestros servicios?</label>
