New Links and clients page

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                                     <a class="nav-link active" href="javascript:goHome()">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://hotmail.com" target="_blank">Clientes</a>
+                                    <a class="nav-link" href="clients.html" target="_blank">Clientes</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://gmail.com" target="_blank">Contratar</a>
+                                    <a class="nav-link" href="https://www.occ.com.mx/empleos-en-mexico-y-el-mundo/big%20data" target="_blank">Contratar</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="javascript:" id="navbarDropdownMenuLink"
@@ -50,9 +50,9 @@
                                         Más info
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="http://google.com" target="_blank">Big data action</a>
-                                        <a class="dropdown-item" href="http://yahoo.com" target="_blank">D3 token</a>
-                                        <a class="dropdown-item" href="http://nasa.gov" target="_blank">Machine Learning</a>
+                                        <a class="dropdown-item" href="https://www.sas.com/en_us/insights/big-data/what-is-big-data.html" target="_blank">Big data action</a>
+                                        <a class="dropdown-item" href="https://d3js.org/" target="_blank">D3 token</a>
+                                        <a class="dropdown-item" href="https://aws.amazon.com/machine-learning/?sc_channel=PS&sc_campaign=acquisition_MX&sc_publisher=google&sc_medium=ACQ-P%7CPS-GO%7CNon-Brand%7CDesktop%7CSU%7CMachine%20Learning%7CMachine%20Learning%7CMX%7CEN%7CText&sc_content=ml_general_e&sc_detail=machine%20learning&sc_category=Machine%20Learning&sc_segment=293612969193&sc_matchtype=e&sc_country=MX&s_kwcid=AL!4422!3!293612969193!e!!g!!machine%20learning&ef_id=WcWjWAAAAF6AMiZ1:20181008064110:s" target="_blank">Machine Learning</a>
                                     </div>
                                 </li>
                             </ul>
