--- a/clients.html
+++ b/clients.html
@@ -38,9 +38,9 @@
                                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                                         <ul class="navbar-nav">
                                             <li class="nav-item">
-                                                <a class="nav-link active" href="javascript:goHome()">Inicio</a>
+                                                <a class="nav-link " href="index.html">Inicio</a>
                                             </li>
-                                            <li class="nav-item">
+                                            <li class="nav-item active">
                                                 <a class="nav-link" href="clients.html">Clientes</a>
                                             </li>
                                             <li class="nav-item">
