--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
                 <div class="form-group">
                     <label for="FControlInput1">Nombre Completo</label>
                     <input type="text" class="form-control data-nombre" id="FControlInput1"
-                           placeholder="Nombre Apellido" require>
+                           placeholder="Nombre Apellido" required>
                 </div>
                 <div class="form-group">
                     <label for="FControlInput2">Dirección de correo electrónico</label>
                     <input type="email" class="form-control data-correo" id="FControlInput2"
-                           placeholder="nombre@mail.com" require>
+                           placeholder="nombre@mail.com" required>
                 </div>
                 <div class="form-group">
                     <label for="FControlSelect1">¿Cómo se enteró de nuestros servicios?</label>
-                    <select class="form-control data-medio" id="FControlSelect1" require>
+                    <select class="form-control data-medio" id="FControlSelect1" required>
                         <option value="" selected>Seleccione</option>
                         <option value="Televisión">Televisión</option>
                         <option value="Radio">Radio</option>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="form-group">
                     <label for="FControlSelect2">Servicios que requiere:</label>
-                    <select multiple class="form-control data-servicios" id="FControlSelect2" require>
+                    <select multiple class="form-control data-servicios" id="FControlSelect2" required>
                         <option>Big Data</option>
                         <option>Gráficos en SVG</option>
                         <option>Visualización en D3</option>
