--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <section id="header-details" class="col-10">
       <section id="header-title">
-        Soluciones especializadas en Big Data
+        Ultimos temblores en el mundo
       </section>
       <section id="header-bookmark" class="row">
         <section id="header-bookmark-menu" class="col-8">
@@ -159,77 +159,7 @@
     </section>
   </section>
   <section id="body" class="row">
-    <section id="map">
-    </section>
-    <!--
-    <section id="body-video" class="col-4">
-        <p>En el siguiente video explicamos la funcionalidad de nuestros servicios y el por que nosotros somos su
-            mejor opción.</p>
-        <iframe src="https://www.youtube.com/embed/CcDCqW88uNY" width="100%" height="70%">
-        </iframe>
-    </section>
-    <section id="body-svg" class="col-4">
-        <div class="charts-container cf">
-            <div class="chart" id="graph-1-container">
-                <h2 class="title">Documentos Analizados</h2>
-                <div class="chart-svg">
-                    <svg class="chart-line" id="chart-1" viewBox="0 0 80 40">
-                        <defs>
-                            <clipPath id="clip" x="0" y="0" width="80" height="40">
-                                <rect id="clip-rect" x="-80" y="0" width="77" height="38.7"/>
-                            </clipPath>
-
-                            <linearGradient id="gradient-1">
-                                <stop offset="0" stop-color="#00d5bd"/>
-                                <stop offset="100" stop-color="#24c1ed"/>
-                            </linearGradient>
-
-                            <linearGradient id="gradient-2">
-                                <stop offset="0" stop-color="#954ce9"/>
-                                <stop offset="0.3" stop-color="#954ce9"/>
-                                <stop offset="0.6" stop-color="#24c1ed"/>
-                                <stop offset="1" stop-color="#24c1ed"/>
-                            </linearGradient>
-
-                            <linearGradient id="gradient-3" x1="0%" y1="0%" x2="0%" y2="100%">>
-                                <stop offset="0" stop-color="rgba(0, 213, 189, 1)" stop-opacity="0.07"/>
-                                <stop offset="0.5" stop-color="rgba(0, 213, 189, 1)" stop-opacity="0.13"/>
-                                <stop offset="1" stop-color="rgba(0, 213, 189, 1)" stop-opacity="0"/>
-                            </linearGradient>
-
-                            <linearGradient id="gradient-4" x1="0%" y1="0%" x2="0%" y2="100%">>
-                                <stop offset="0" stop-color="rgba(149, 76, 233, 1)" stop-opacity="0.07"/>
-                                <stop offset="0.5" stop-color="rgba(149, 76, 233, 1)" stop-opacity="0.13"/>
-                                <stop offset="1" stop-color="rgba(149, 76, 233, 1)" stop-opacity="0"/>
-                            </linearGradient>
-
-                        </defs>
-                    </svg>
-                    <h3 class="valueX">time</h3>
-                </div>
-                <div class="chart-values">
-                    <p class="h-value">1689h</p>
-                    <p class="percentage-value"></p>
-                    <p class="total-gain"></p>
-                </div>
-                <div class="triangle green"></div>
-            </div>
-
-            <div class="chart circle" id="circle-1">
-                <h2 class="title">Porcentaje de Avance</h2>
-                <div class="chart-svg align-center">
-                    <h2 class="circle-percentage"></h2>
-                    <svg class="chart-circle" id="chart-3" width="50%" viewBox="0 0 100 100">
-                        <path class="underlay" d="M5,50 A45,45,0 1 1 95,50 A45,45,0 1 1 5,50"/>
-                    </svg>
-                </div>
-                <div class="triangle green"></div>
-            </div>
-
-        </div>
-    </section>
-    <section id="body-d3" class="col-4"></section>
-    -->
+    <iframe width="100%" height="100%" frameborder="0" src="https://jondeltoro.carto.com/builder/a5d73841-cd68-41dc-871b-6c466579f28a/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </section>
   <section id="footer" class="row">
     <section id="footer-info" class="col-sm">
