--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+  <meta http-equiv="Pragma" content="no-cache"/>
+  <meta http-equiv="Expires" content="0"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,  user-scalable=no">
 
   <title>Proyecto Unidad 4</title>
@@ -159,7 +161,9 @@
     </section>
   </section>
   <section id="body" class="row">
-    <iframe width="100%" height="100%" frameborder="0" src="https://jondeltoro.carto.com/builder/a5d73841-cd68-41dc-871b-6c466579f28a/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    <iframe width="100%" height="100%" frameborder="0"
+            src="https://jondeltoro.carto.com/builder/a5d73841-cd68-41dc-871b-6c466579f28a/embed" allowfullscreen
+            webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </section>
   <section id="footer" class="row">
     <section id="footer-info" class="col-sm">
